<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mylastname_newsletter_subscription_form">Tuwars_Newsletter_Subscription_Form</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="agree_to_terms_and_conditions">Agree to Terms and Conditions</string>
    <string name="register">Register</string>
    <string name="opt_in_family_events">Opt in for family events</string>
    <string name="male_gender_selection">Male gender selection</string>
    <string name="female_gender_selection">Female gender selection</string>
    <string name="other_gender_selection">Other gender selection</string>
    <string name="check_to_agree_with_terms_and_conditions">Check to agree with terms and conditions</string>
    <string name="switch_for_family_event_subscription">Switch for family event subscription</string>
    <string name="thank_you_for_subscribing">Thank you for subscribing!</string>
    <string name="thank_you_message">Thank you for subscribing, %1$s!</string>
    <string name="user_name">Name: %1$s</string>
    <string name="user_email">Email: %1$s</string>
    <string name="user_gender">Gender: %1$s</string>
    <string name="terms_accepted">Terms Accepted: %1$s</string>
    <string name="family_event_opt_in">Opted in for Family Events: %1$s</string>
    <string name="go_to_activity_two">Go to Activity Two</string>
    <string name="welcome_message">Welcome to Activity Two, %1$s!</string>
    <string name="welcome">Welcome!</string>
</resources>